[package]
name = "infinite"
version = "0.1.0"
edition = "2021"
authors = ["infinite Contributors"]
description = "A command-line mod manager for Diablo II: Resurrected"
license = "MIT"
repository = "https://github.com/Diablo-II-Resurrected/Infinite"

[dependencies]
# Lua runtime
mlua = { version = "0.9", features = ["lua54", "async", "serialize", "vendored"] }

# JavaScript runtime (optional, work in progress)
rquickjs = { version = "0.9.0", features = ["array-buffer", "loader", "classes"], optional = true }

# CLI framework
clap = { version = "4.5", features = ["derive", "cargo"] }
colored = "2.1"

# Async runtime
tokio = { version = "1.37", features = ["full"] }
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.11", features = ["json", "blocking"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json5 = "0.4"
csv = "1.3"

# File system
walkdir = "2.5"
glob = "0.3"

# CASC archive support
casclib = { git = "https://github.com/wc3tools/casclib-rs" }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# GUI framework
eframe = "0.27"
egui = "0.27"
rfd = "0.14"  # Native file dialogs
dirs = "5.0"  # System directory paths

[features]
default = []
js-runtime = ["rquickjs"]

[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"

[[bin]]
name = "infinite"
path = "src/main.rs"

[[bin]]
name = "infinite-gui"
path = "src/gui/main.rs"
